Fix Results container being cut off on small screens

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,7 +53,7 @@ body {
   max-width: 800px;
 
   @media only screen and (max-width: 800px){
-    padding: 0 1em;
+    max-width: 90vw;
   }
 
   p {
